syntax = "proto3";

option csharp_namespace = "Auth.Grpc";

package auth;

service AuthService {
  rpc ValidateToken (TokenRequest) returns (TokenValidationResponse);
  rpc GetUserId (TokenRequest) returns (UserIdResponse);
}

message TokenRequest {
  string token = 1;
}

message TokenValidationResponse {
  bool is_valid = 1;
  string user_id = 2;
  string username = 3;
}

message UserIdResponse {
  string user_id = 1;
}